<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/measurements_table_header_bg"
    android:padding="10dip">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@android:color/white" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</TableRow>